
[TestScrollProp/should_populate_scrollProps_with_pagination_metadata_on_full_request - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": 1,
   "nextPage": 2,
   "pageName": "page",
   "previousPage": null
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_add_to_mergeProps_when_scroll_merge_intent_is_append - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_use_custom_wrapper_path_when_WithWrapper_is_set - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.items"
 ],
 "props": {
  "users": {
   "items": [
    "one"
   ],
   "meta": {
    "total": 1
   }
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_add_to_prependProps_when_scroll_merge_intent_is_prepend - 1]
{
 "component": "TestComponent",
 "prependProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_resolve_value_from_lazy_source_when_prop_value_is_lazy - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "lazy-one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_mark_scroll_prop_as_reset_when_its_key_is_in_reset_list,_still_returning_the_value_and_scroll_metadata - 1]
{
 "component": "TestComponent",
 "props": {
  "users": {
   "data": [
    "fresh"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": 1,
   "nextPage": 2,
   "pageName": "",
   "previousPage": null,
   "reset": true
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_not_mark_scroll_prop_as_reset_when_its_key_is_absent_from_reset_list - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": 1,
   "nextPage": 2,
   "pageName": "",
   "previousPage": null
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_default_to_append_when_scroll_merge_intent_is_empty - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/it_should_emit_multiple_scrollProps_entries_when_multiple_scroll_props_exist - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.data",
  "notifications.data"
 ],
 "props": {
  "notifications": {
   "data": [
    "n"
   ]
  },
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "notifications": {
   "currentPage": null,
   "pageName": ""
  },
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/it_should_leave_scrollProps_empty_when_no_scroll_props_are_present - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---
